--- a/CCLE.Rmd
+++ b/CCLE.Rmd
@@ -7,18 +7,21 @@ output: pdf_document
 
 # packages
 ```{r warning = FALSE, message = FALSE}
-library(tidyverse)
-library(ggplot2)
+setwd("C:/Users/Sohyeon Kim/add_decomp_linux")
+
+library(dplyr)
+library(stringr)
 library(Matrix)
 library(data.table)
-library(pander)
 library(Rcpp)
 library(splines)
 library(fda)
 library(glmnet)
+library(foreach)
+library(doParallel)
 
 source("https://raw.githubusercontent.com/S0Hye0NKim/add_decomp/master/functions/add_decomp_function.R")
-sourceCpp("functions/add_decomp_function.cpp")
+sourceCpp("[KSH]add_decomp_function.cpp")
 ```
 
 
@@ -30,9 +33,9 @@ sourceCpp("functions/add_decomp_function.cpp")
 ## 0-(1) Screening Y
 
 ```{r message = FALSE, warning = FALSE}
-Y <- fread("resp_mat.csv")[, -1]
+Y <- fread("ksh_resp_mat.csv")[, -1]
 m <- ncol(Y)
-trt_nm <- readLines("trt_nm.txt", encoding = "UTF-8") %>%
+trt_nm <- readLines("ksh_trt_nm.txt", encoding = "UTF-8") %>%
   str_split(pattern = ",") %>%
   sapply(FUN = function(x) str_remove_all(x, pattern = "'") %>% str_trim) %>%
   unlist()
@@ -42,7 +45,7 @@ names(Y) <- trt_nm
 Y_sd <- Y[, lapply(.SD, sd)] %>% as.matrix %>% t()
 data.frame(Y_sd) %>%
   mutate(group = rownames(.)) %>%
-  select(group, Y_sd) %>%
+  dplyr::select(group, Y_sd) %>%
   arrange(Y_sd) %>% head(5)
 
 Y <- Y[, -"Panobinostat"] 
@@ -58,7 +61,7 @@ Panobinostat 의 sd = 0.08 -> 제거
  * Assumption : Genes with small sd are irrelevant to the drug responses. 
 
 ```{r}
-X <- fread("express_mat.csv")
+X <- fread("ksh_express_mat.csv")
 cell_name <- X[[1]]
 rownames(X) <- cell_name
 X <- X[, -1]
@@ -66,11 +69,11 @@ X <- X[, -1]
 X_sd <- X[, lapply(.SD, FUN = sd)] %>% as.matrix() %>% t()
 idx_scr_sd <-  data.frame(X_sd) %>%
   mutate(variable = rownames(.)) %>%
-  select(variable, X_sd) %>%
+  dplyr::select(variable, X_sd) %>%
   arrange(-X_sd) %>% 
   .[1:10000, ] %>% .$variable
 
-X <- select(X, idx_scr_sd)
+X <- dplyr::select(X, idx_scr_sd)
 ```
 
 
@@ -89,7 +92,7 @@ idx_scr_cor <- cor(X, Y) %>% abs %>%
   data.frame(variable = names(.), cor = .) %>%
   arrange(-cor) %>% first(p) %>% .$variable
 
-X <- select(X, idx_scr_cor) %>% 
+X <- dplyr::select(X, idx_scr_cor) %>% 
   apply(MARGIN = 2, FUN = function(x) (x - mean(x))/(sd(x)*sqrt((n-1)/n))) %>%
   cbind(1, .)
 colnames(X)[1] <- "intercept"
@@ -99,9 +102,11 @@ gene_ex <- colnames(X)
 
 
 ```{r}
-K <- 10
-b <- 21
-tau_seq <- seq(from = 0.4, to = 0.6, length.out = b)
+K <- 2
+b <- 15
+tau_seq <- seq(from = 0.35, to = 0.65, length.out = b)
+idx_tau <- idx_tau <- (tau_seq >= "0.4" & tau_seq <= "0.6")
+tau_seq_real <- tau_seq[idx_tau]
 
 knots_seq <- seq(min(tau_seq) - 0.02, max(tau_seq) + 0.02, length.out = K)
 Phi <- fda::bsplineS(tau_seq, breaks= knots_seq, norder=2, nderiv=0, returnMatrix=FALSE)
@@ -111,78 +116,266 @@ V <- calc_V(as.matrix(X), Phi)
 
 
 ```{r}
-lasso_coef <- matrix(nrow = p+1, ncol = m)
-for(g in 1:m) {
-  cv.lasso <- cv.glmnet(x = X[, -1], y = as.matrix(Y)[, g], alpha = 1, type.measure = "mae")
-  lasso_model <- glmnet(X[, -1], as.matrix(Y)[, g], family = "gaussian", alpha = 1, lambda = cv.lasso$lambda.min)
-  lasso_coef[, g] <- c(lasso_model$a0, as.vector(lasso_model$beta))
-}
+set.seed(1)
+X <- as.matrix(X)
+Y <- as.matrix(Y)
 
+ lasso_coef <- matrix(nrow = p+1, ncol = m)
+  for(g in 1:m) {
+    cv.lasso <- cv.glmnet(x = X[, -1], y = Y[, g], alpha = 1, type.measure = "mae")
+    lasso_model <- glmnet(X[, -1], Y[, g], family = "gaussian", alpha = 1, lambda = cv.lasso$lambda.min)
+    lasso_coef[, g] <- c(lasso_model$a0, as.vector(lasso_model$beta))
+  }
 
 theta_init <- matrix(nrow = (p+1)*K, ncol = m)
-for(g in 1:m) {
-  for(j in 0:p) {
-    theta_init[((j*K)+1):((j+1)*K), g] <- lasso_coef[j+1, g]
+  for(g in 1:m) {
+    for(j in 0:p) {
+      theta_init[((j*K)+1):((j+1)*K), g] <- lasso_coef[j+1, g]
+    }
+  }
+  
+  Y_modified <- Y - X%*%lasso_coef
+  ridge_coef <- matrix(nrow = p+1, ncol = m)
+  for(g in 1:m) {
+    cv.ridge <- cv.glmnet(x = X[, -1], y = Y_modified[, g], alpha = 0, type.measure = "mae")
+    ridge_model <- glmnet(X[, -1], Y_modified[, g], family = "gaussian", alpha = 0, lambda = cv.ridge$lambda.min)
+    ridge_coef[, g] <- c(ridge_model$a0, as.vector(ridge_model$beta))
+  }
+  alpha_init <- ridge_coef
+```
+
+
+
+```{r}
+library(ggplot2)
+data.frame(col = rep(1:m, each = (p+1)), 
+           row = rep(1:(p+1), m),
+           value = as.vector(lasso_coef)) %>%
+  mutate(nonzero = ifelse(abs(value) < 0.1^5, 0, 1) %>% as.character) %>%
+  ggplot(aes(x = col, y = -row, fill = nonzero)) +
+  geom_tile(color = "grey") +
+  scale_fill_manual(values = c("white", "black"), name = "entry", label = c("zero", "non-zero")) + 
+  theme_bw() +
+  theme(axis.line = element_blank(),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    panel.border = element_blank(),
+    panel.background = element_blank(), 
+    axis.title.x = element_blank(), 
+    axis.text.x = element_blank(), 
+    axis.ticks.x = element_blank(), 
+    axis.title.y = element_blank(), 
+    axis.text.y = element_blank(), 
+    axis.ticks.y = element_blank()) +
+  ggtitle("lasso_coef heatmap") 
+```
+
+
+
+# 1. Initial value
+
+```{r}
+init_val <- add_decomp_r(delta = 1, lambda_1 = 0.01, lambda_2 = 0.001, tol_error = 0.1^5, max_iter = 50,
+                         X = X, Y = Y, V = V, Phi = Phi, 
+                         theta_0 = theta_init, Z_0 = X%*%alpha_init, tau_seq = tau_seq, weight = FALSE)
+
+```
+
+
+
+
+
+```{r}
+gamma_tau_hat <- est_gamma(Phi[idx_tau, ], init_val$theta)
+
+zero_idx_est <- lapply(gamma_tau_hat, FUN = function(x) which(abs(x) < 0.1^5, arr.ind = TRUE) %>% as_tibble) %>%
+    bind_rows (.id = "tau") %>%
+    group_by(row, col) %>%
+    summarise(zero = n(), .groups = "keep") %>%
+    filter(zero == length(gamma_tau_hat))
+
+Neg <- nrow(zero_idx_est)
+Pos <- prod(dim(gamma_tau_hat[[1]])) - Neg
+
+data.frame("Positive"=Pos, "Negative" = Neg)
+
+
+```
+
+
+# 2. BIC
+
+```{r}
+log_lamb1 <- c( seq(0.9, 1.5, length.out = 10))
+lamb1_seq <- exp(log_lamb1)
+
+#log_lamb2 <- c(seq(1, 2, length.out = 10))
+log_lamb2 <- c(seq(1.2, 3.2, length.out = 10))
+lamb2_seq <- exp(log_lamb2)
+
+BIC_table <- list()
+
+for(idx in 1:length(lamb1_seq)) {
+  lamb1 <- lamb1_seq[idx]
+  cl <- makeCluster(11) #not to overload your computer
+  registerDoParallel(cl) # Ready to parallel
+  
+  temp_BIC <- foreach(lamb2 = lamb2_seq, .noexport = "add_decomp") %dopar% {
+    library(dplyr)
+    library(splines)
+    library(Matrix)
+    library(glmnet)
+    library(fda)
+    
+    BIC_simul <- add_decomp_BIC(X, Y, V, Phi, theta_0 = init_val$theta, Z_0 = init_val$Z, tau_seq, tau_seq_real, delta = 1, 
+                        lamb1_seq = lamb1, lamb2_seq = lamb2, max_iter = 50)
+    BIC_simul$table
+  }
+  stopCluster(cl)
+  BIC_table[[idx]] <- temp_BIC
+}
+ 
+
+BIC_table %>% lapply(FUN = function(x) bind_rows(x)) %>%
+  bind_rows() %>%
+  mutate(LR_part = r_hat * max(1, m) / (2*n*m),  
+         LR = log(n) * LR_part, 
+         SP = log(p)*log(log(n)) * SP_part, 
+         BIC = log_Q + LR + SP) %>%
+  arrange(BIC) %>%
+  head(6)
+
+```
+
+```{r}
+load("C:/Users/Sohyeon Kim/add_decomp/BIC_table.RData")
+
+BIC_table %>% lapply(FUN = function(x) bind_rows(x)) %>%
+  bind_rows() %>%
+  mutate(LR_part = r_hat * max(1, m) / (2*n*m),  
+         LR = log(n) * LR_part, 
+         SP = log(log(n))*log(p) * SP_part, 
+         BIC = log_Q + LR + SP) %>%
+  arrange(BIC) %>%
+  head(6)
+
+```
+
+
+
+```{r}
+BIC_params <- BIC_table %>% lapply(FUN = function(x) bind_rows(x)) %>%
+  bind_rows() %>%
+  mutate(LR_part = r_hat * max(1, m) / (2*n*m),  
+         LR = log(n) * LR_part, 
+         SP = log(p)*log(log(n)) * SP_part, 
+         BIC = log_Q + LR + SP) %>%
+  mutate_all(.funs = as.numeric) %>% 
+  arrange(BIC) %>%
+  head(1)
+```
+
+
+
+```{r}
+data <- BIC_table %>% lapply(FUN = function(x) bind_rows(x)) %>%
+  bind_rows() %>%
+  mutate(LR_part = r_hat * max(1, m) / (2*n*m),  
+         LR = log(n) * LR_part, 
+         SP = log(p)*log(log(n)) * SP_part, 
+         BIC = log_Q + LR + SP) %>%
+  mutate_all(.funs = as.numeric) %>%
+  arrange(BIC)
+
+```
+
+
+```{r}
+x <- data$lambda_1 %>% unique() %>% sort
+y <- data$lambda_2 %>% unique() %>% sort
+z <- matrix(0, nrow = length(x), ncol = length(y))
+
+for(i in 1:length(x))
+{
+  for(j in 1:length(y))
+  {
+
+z[i,j] = filter(data, lambda_1 == x[i], lambda_2 == y[j])$BIC
   }
 }
-
-Y_modified <- (Y - X%*%lasso_coef) %>% as.matrix
-
-lin_model <- lm(Y_modified~., data = data.frame(X[, -1]))
-alpha_init <- lin_model$coefficients
-
 ```
 
 
 ```{r}
-max_iter <- 300
-delta <- 1
-lambda_1 <- 1.25
-lambda_2 <- 0.25
-tol_error <- 0.1
+persp3D(x, y, z,theta=30, phi=0, axes=TRUE,scale=2, box=TRUE, nticks=5, 
 
-start <- Sys.time()
-result <- add_decomp(delta, lambda_1, lambda_2, tol_error, max_iter, X = as.matrix(X), Y = as.matrix(Y), 
-                     V = V, Phi = Phi, theta_0 = theta_init, alpha_0 = alpha_init)
-end <- Sys.time()
-
-end - start
+        ticktype="detailed", xlab="lambda_1", ylab="lambda_2", zlab="BIC", 
+        main = "K = 2")
 ```
 
 
+ * LR은 log(p)
+ 
+ * SP는 log(log(p)) 로 임의로 선택.
+
+
+$$\lambda_1=1, \lambda_2=136.1$$
+
+# 3. Proposed Model
 
 ```{r}
-result$iter_error %>% 
-  na.omit() %>%
-  data.frame %>%
-  mutate(iter = 1:nrow(.)) %>%
-  filter(iter > 15) %>% 
-  gather(key = "estimator", value = "value", -iter) %>%
-  ggplot() +
-  geom_line(aes(x = iter, y = value, group = estimator, color = estimator)) +
-  facet_wrap(~estimator, scales = "free_y")
+result <- add_decomp_r(delta = 1, lambda_1 = BIC_params$lambda_1 %>% as.numeric, lambda_2 = BIC_params$lambda_2 %>% as.numeric, tol_error = 0.1^5, max_iter = 50,
+                         X = X, Y = Y, V = V, Phi = Phi, 
+                         theta_0 = init_val$theta, Z_0 = init_val$Z, tau_seq = tau_seq, weight = TRUE)
 ```
 
+
+## Low-rank matrix
+
 ```{r}
-sing_val <- svd(result$alpha)$d
+L_hat <- solve(t(X) %*% X) %*% t(X) %*% result$Z
+L_hat %>% rankMatrix
+```
+
+
+```{r}
+sing_val <- svd(L_hat)$d
 sum(sing_val[1:1])/sum(sing_val)
-rankMatrix(result$alpha)
+rankMatrix(result$Z)
+sing_val %>% round(2)
 ```
+
+## Sparse matrix
 
 ```{r}
-gamma_hat <- est_gamma(Phi = Phi, theta = result$theta)
+
+gamma_tau_hat <- est_gamma(Phi[idx_tau, ], result$theta)
 ```
 
 
 
+```{r}
+zero_idx_est <- lapply(gamma_tau_hat, FUN = function(x) which(abs(x) < 0.1^5, arr.ind = TRUE) %>% as_tibble) %>%
+    bind_rows (.id = "tau") %>%
+    group_by(row, col) %>%
+    summarise(zero = n(), .groups = "keep") %>%
+    filter(zero == length(gamma_tau_hat))
+
+Neg <- nrow(zero_idx_est)
+Pos <- prod(dim(gamma_tau_hat[[1]])) - Neg
+
+data.frame("Positive"=Pos, "Negative" = Neg)
 
 
+```
+
+## heatmap
 
 
 ```{r}
 data.frame(col = rep(1:m, each = (p+1)), 
            row = rep(1:(p+1), m),
-           value = as.vector(gamma_hat[[3]])) %>%
+           value = as.vector(gamma_tau_hat[[5]])) %>%
   mutate(value = ifelse(abs(value) < 0.1^5, 0, value)) %>%
   ggplot(aes(x = col, y = -row, fill = value)) +
   geom_tile(color = "grey") +
@@ -203,12 +396,36 @@ data.frame(col = rep(1:m, each = (p+1)),
 ```
 
 ```{r}
-gamma_hat <- est_gamma(Phi, theta = result$theta)
+data.frame(col = rep(1:m, each = (p)), 
+           row = rep(1:p, m),
+           value = as.vector(gamma_tau_hat[[5]][-1, ])) %>%
+  mutate(value = ifelse(abs(value) < 0.1^5, 0, value)) %>%
+  ggplot(aes(x = col, y = -row, fill = value)) +
+  geom_tile(color = "grey") +
+  scale_fill_gradient2(low = "red",mid = "white", high = "blue") +
+  theme_bw() +
+  theme(axis.line = element_blank(),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    panel.border = element_blank(),
+    panel.background = element_blank(), 
+    axis.title.x = element_blank(), 
+    axis.text.x = element_blank(), 
+    axis.ticks.x = element_blank(), 
+    axis.title.y = element_blank(), 
+    axis.text.y = element_blank(), 
+    axis.ticks.y = element_blank()) +
+  ggtitle(expression(Gamma~"("~tau[3]~"=0.5)"))
+```
 
-lapply(gamma_hat, FUN = function(x) data.frame(col = rep(1:m, each = (p+1)),
+
+
+```{r}
+
+lapply(gamma_tau_hat, FUN = function(x) data.frame(col = rep(1:m, each = (p+1)),
                                                    row = rep(1:(p+1), m),
                                                    value = as.vector(x))) %>%
-  `names<-`(tau_seq) %>%
+  `names<-`(tau_seq_real) %>%
   bind_rows(.id = "tau") %>%
   mutate(is_nonzero = ifelse(abs(value) < 0.1^5, 0, 1)) %>%
   group_by(col, row) %>%
@@ -229,33 +446,483 @@ lapply(gamma_hat, FUN = function(x) data.frame(col = rep(1:m, each = (p+1)),
     axis.title.y = element_blank(), 
     axis.text.y = element_blank(), 
     axis.ticks.y = element_blank()) +
-  ggtitle(expression("all of"~Gamma~"("~tau[l]~")"))
+  ggtitle(expression("S("~tau[l]~")"))
 ```
 
+## smooth function
+
 ```{r}
-idx_nz_est <- lapply(gamma_hat, FUN = function(x) which(abs(x) > 0.1^5, arr.ind = TRUE) %>% as_tibble) %>%
+library(tidyr)
+idx_nz_est <- lapply(gamma_tau_hat, FUN = function(x) which(abs(x) > 0.1^5, arr.ind = TRUE) %>% as_tibble) %>%
     bind_rows (.id = "tau") %>%
     group_by(row, col) %>%
     summarise(zero = n()) 
 
-gamma_hat %>%
+gamma_data <- gamma_tau_hat %>%
+  lapply(FUN = function(x) x[idx_nz_est$row, idx_nz_est$col] %>% diag %>%
+           data.frame(row = idx_nz_est$row, col = idx_nz_est$col, value = . )) %>%
+  `names<-`(value = tau_seq_real) %>%
+  bind_rows(.id = "tau") %>%
+  filter(row == 47, col == 2) %>% 
+  unite(col = index, row, col, sep = ",") %>%
+  mutate(index = paste0("(", index, ")"), tau = as.numeric(tau))
+
+spline_int <- as.data.frame(spline(gamma_data$tau, gamma_data$value))
+
+ggplot(gamma_data) +
+  geom_point(aes(x = tau, y = value), size = 3) +
+  geom_line(data = spline_int, aes(x = x, y = y))
+
+```
+```{r}
+gamma_data <- gamma_tau_hat %>%
+  lapply(FUN = function(x) x[idx_nz_est$row, idx_nz_est$col] %>% diag %>%
+           data.frame(row = idx_nz_est$row, col = idx_nz_est$col, value = . )) %>%
+  `names<-`(value = tau_seq_real) %>%
+  bind_rows(.id = "tau") %>%
+  filter(col == 15, row != 1) %>%
+  unite(col = index, row, col, sep = ",") %>%
+  mutate(index = paste0("(", index, ")"), tau = as.numeric(tau))
+
+spline_int <- as.data.frame(spline(gamma_data$tau, gamma_data$value))
+
+ggplot(gamma_data) +
+  geom_line(aes(x = tau, y = value, group = index, color = index))
+```
+
+
+```{r}
+gamma_tau_hat_full <- est_gamma(Phi, result$theta)
+
+
+idx_nz_est <- lapply(gamma_tau_hat_full, FUN = function(x) which(abs(x) > 0.1^5, arr.ind = TRUE) %>% as_tibble) %>%
+    bind_rows (.id = "tau") %>%
+    group_by(row, col) %>%
+    summarise(zero = n()) 
+
+gamma_data <- gamma_tau_hat_full %>%
   lapply(FUN = function(x) x[idx_nz_est$row, idx_nz_est$col] %>% diag %>%
            data.frame(row = idx_nz_est$row, col = idx_nz_est$col, value = . )) %>%
   `names<-`(value = tau_seq) %>%
   bind_rows(.id = "tau") %>%
-  filter(row == 50) %>% 
+  filter(col == 15, row != 1) %>% 
   unite(col = index, row, col, sep = ",") %>%
-  mutate(index = paste0("(", index, ")"), tau = as.numeric(tau)) %>%
-  ggplot() +
-  geom_line(aes(x = tau, y = value, group = index, color = index), size = 1.2) +
-  labs(x = expression(tau[l]), title = expression(gamma~"("~tau[l]~"), b = 21, "~Delta~"=[0.4,0.6]"))
+  mutate(index = paste0("(", index, ")"), tau = as.numeric(tau))
+
+spline_int <- as.data.frame(spline(gamma_data$tau, gamma_data$value))
+
+ggplot(gamma_data) +
+  geom_line(aes(x = tau, y = value, group = index, color = index))
+
 ```
 
+
+# Prediction error
+
+
+```{r}
+PE <- rep(0, 5)
+
+set.seed(1)
+sample_idx <- sample(1:5, size = nrow(X), replace = TRUE)
+
+K <- 10
+b <- 15
+tau_seq <- seq(from = 0.35, to = 0.65, length.out = b)
+idx_tau <- idx_tau <- (tau_seq >= "0.4" & tau_seq <= "0.6")
+tau_seq_real <- tau_seq[idx_tau]
+
+knots_seq <- seq(min(tau_seq) - 0.02, max(tau_seq) + 0.02, length.out = K)
+Phi <- fda::bsplineS(tau_seq, breaks= knots_seq, norder=2, nderiv=0, returnMatrix=FALSE)
+
+for(i in 1:5) {
+  X_train <- X[sample_idx != i, ]
+  X_test <- X[sample_idx == i, ]
+  Y_train <- Y[sample_idx !=i, ]
+  Y_test <- Y[sample_idx == i, ]
+  
+  V <- calc_V(as.matrix(X_train), Phi)
+  
+  X_train <- as.matrix(X_train)
+  Y_train <- as.matrix(Y_train)
+
+ lasso_coef <- matrix(nrow = p+1, ncol = m)
+ for(g in 1:m) {
+   cv.lasso <- cv.glmnet(x = X_train[, -1], y = Y_train[, g], alpha = 1, type.measure = "mae")
+   lasso_model <- glmnet(X_train[, -1], Y_train[, g], family = "gaussian", alpha = 1, lambda = cv.lasso$lambda.min)
+   lasso_coef[, g] <- c(lasso_model$a0, as.vector(lasso_model$beta))
+ }
+
+ theta_init <- matrix(nrow = (p+1)*K, ncol = m)
+ for(g in 1:m) {
+   for(j in 0:p) {
+     theta_init[((j*K)+1):((j+1)*K), g] <- lasso_coef[j+1, g]
+   }
+ }
+  
+ Y_modified <- Y_train - X_train%*%lasso_coef
+ ridge_coef <- matrix(nrow = p+1, ncol = m)
+ for(g in 1:m) {
+   cv.ridge <- cv.glmnet(x = X_train[, -1], y = Y_modified[, g], alpha = 0, type.measure = "mae")
+   ridge_model <- glmnet(X_train[, -1], Y_modified[, g], family = "gaussian", alpha = 0, lambda = cv.ridge$lambda.min)
+   ridge_coef[, g] <- c(ridge_model$a0, as.vector(ridge_model$beta))
+ }
+ alpha_init <- ridge_coef
+ 
+ init_val <- add_decomp_r(delta = 1, lambda_1 = 0.025, lambda_2 = 0.001, tol_error = 0.1^5, max_iter = 50,
+                         X = X_train, Y = Y_train, V = V, Phi = Phi, 
+                         theta_0 = theta_init, Z_0 = X_train%*%alpha_init, tau_seq = tau_seq, weight = FALSE)
+  
+ log_lamb1 <- c( seq(-7, 7, length.out = 10))
+ lamb1_seq <- exp(log_lamb1)
+
+ log_lamb2 <- c(seq(3,10, length.out = 10))
+ lamb2_seq <- exp(log_lamb2)
+
+ BIC_table <- list()
+
+ for(idx in 1:length(lamb1_seq)) {
+   lamb1 <- lamb1_seq[idx]
+   cl <- makeCluster(11) #not to overload your computer
+   registerDoParallel(cl) # Ready to parallel
+  
+   temp_BIC <- foreach(lamb2 = lamb2_seq, .noexport = "add_decomp") %dopar% {
+     library(dplyr)
+     library(splines)
+     library(Matrix)
+     library(glmnet)
+     library(fda)
+    
+     BIC_simul <- add_decomp_BIC(X_train, Y_train, V, Phi, theta_0 = init_val$theta, Z_0 = init_val$Z,
+                                 tau_seq, tau_seq_real, lamb1_seq = lamb1, lamb2_seq = lamb2, max_iter = 50)
+    BIC_simul$table
+  }
+  stopCluster(cl)
+  BIC_table[[idx]] <- temp_BIC
+ }
+ 
+ BIC_params <- BIC_table %>% lapply(FUN = function(x) bind_rows(x)) %>%
+  bind_rows() %>%
+  mutate(LR_part = r_hat * max(1, m) / (2*n*m),  
+         LR = log(log(p)) * LR_part, 
+         SP = log(p) * SP_part, 
+         BIC = log_Q + LR + SP) %>%
+  arrange(BIC) %>% 
+  head(1)
+ 
+ result <- add_decomp_r(delta = 1, lambda_1 = as.numeric(BIC_params$lambda_1), 
+                        lambda_2 = as.numeric(BIC_params$lambda_2),
+                        tol_error = 0.1^5, max_iter = 50,
+                         X = X_train, Y = Y_train, V = V, Phi = Phi, 
+                         theta_0 = init_val$theta, Z_0 = init_val$Z, tau_seq = tau_seq, weight = TRUE)
+ 
+ gamma_tau_hat <- est_gamma(Phi[idx_tau, ], result$theta)
+ L_hat <- solve(t(X_train) %*% X_train) %*% t(X_train) %*% result$Z
+
+ Y_hat_test <- mapply(FUN = function(X, L, S) X %*% L + X %*% S, X = list(X_test), L = list(L_hat),
+                      S = gamma_tau_hat, SIMPLIFY = FALSE)
+ error <- mapply(FUN = function(true, est) true - est, true = list(as.matrix(Y_test)), est = Y_hat_test, 
+                 SIMPLIFY = FALSE)
+ 
+ PE[i] <- cal_cl_sum(error, tau_seq_real)
+ print(i)
+}
+
+
+```
+
+```{r}
+PE <- rep(0, 5)
+
+set.seed(1)
+sample_idx <- sample(1:5, size = nrow(X), replace = TRUE)
+
+K <- 10
+b <- 15
+tau_seq <- seq(from = 0.35, to = 0.65, length.out = b)
+idx_tau <- idx_tau <- (tau_seq >= "0.4" & tau_seq <= "0.6")
+tau_seq_real <- tau_seq[idx_tau]
+
+knots_seq <- seq(min(tau_seq) - 0.02, max(tau_seq) + 0.02, length.out = K)
+Phi <- fda::bsplineS(tau_seq, breaks= knots_seq, norder=2, nderiv=0, returnMatrix=FALSE)
+
+for(i in 1:5) {
+  X_train <- X[sample_idx != i, ]
+  X_test <- X[sample_idx == i, ]
+  Y_train <- Y[sample_idx !=i, ]
+  Y_test <- Y[sample_idx == i, ]
+  
+  X_train <- as.matrix(X_train)
+  Y_train <- as.matrix(Y_train)
+
+ ridge_coef <- matrix(nrow = p+1, ncol = m)
+  for(g in 1:m) {
+    cv.ridge <- cv.glmnet(x = X_train[, -1], y = Y_train[, g], alpha = 0, type.measure = "mae")
+    ridge_model <- glmnet(X_train[, -1], Y_train[, g], family = "gaussian", alpha = 0, 
+                          lambda = cv.ridge$lambda.min)
+    ridge_coef[, g] <- c(ridge_model$a0, as.vector(ridge_model$beta))
+  }
+ first_init_LR <- ridge_coef
+  
+ init_val_LR <- LR_model_r(delta = 0.1, lambda = 0.05, tol_error = 0.1^5, max_iter = 50, 
+                          X = X_train, Y = Y_train, Z_0 = X_train %*% first_init_LR, 
+                          tau_seq = tau_seq, weight = FALSE)
+  
+ log_lamb <- c( seq(1, 10, length.out = 20))
+ lamb_seq <- exp(log_lamb)
+ BIC_simul <- LR_model_BIC(X_train, Y_train, Z_0 = init_val_LR$Z, tau_seq, tau_seq_real, lamb_seq, 
+                           max_iter = 50, r_X = 1)
+  
+ BIC_params <- BIC_simul$min_BIC %>%
+   arrange(BIC_log_p) %>%
+   head(1)
+  
+ result <- BIC_simul$simulation[[which(lamb_seq == BIC_params$lambda)]]
+ 
+ L_hat <- solve(t(X_train) %*% X_train) %*% t(X_train) %*% result$Z
+
+ Y_hat_test <- X_test %*% L_hat
+   
+ error <- (Y_test - Y_hat_test) %>% as.matrix
+ 
+ error_list <- list()
+ for(l in 1:length(tau_seq_real)) {
+   error_list[[l]] <- error
+ }
+ 
+ PE[i] <- cal_cl_sum(error_list, tau_seq_real)
+ print(i)
+}
+
+```
+
+```{r}
+PE <- rep(0, 5)
+
+set.seed(1)
+sample_idx <- sample(1:5, size = nrow(X), replace = TRUE)
+
+K <- 10
+b <- 15
+tau_seq <- seq(from = 0.35, to = 0.65, length.out = b)
+idx_tau <- idx_tau <- (tau_seq >= "0.4" & tau_seq <= "0.6")
+tau_seq_real <- tau_seq[idx_tau]
+
+knots_seq <- seq(min(tau_seq) - 0.02, max(tau_seq) + 0.02, length.out = K)
+Phi <- fda::bsplineS(tau_seq, breaks= knots_seq, norder=2, nderiv=0, returnMatrix=FALSE)
+
+for(i in 1:5) {
+  X_train <- X[sample_idx != i, ]
+  X_test <- X[sample_idx == i, ]
+  Y_train <- Y[sample_idx !=i, ]
+  Y_test <- Y[sample_idx == i, ]
+  
+  V <- calc_V(as.matrix(X_train), Phi)
+  
+  X_train <- as.matrix(X_train)
+  Y_train <- as.matrix(Y_train)
+
+ lasso_coef <- matrix(nrow = p+1, ncol = m)
+ for(g in 1:m) {
+   cv.lasso <- cv.glmnet(x = X_train[, -1], y = Y_train[, g], alpha = 1, type.measure = "mae")
+   lasso_model <- glmnet(X_train[, -1], Y_train[, g], family = "gaussian", alpha = 1, lambda = cv.lasso$lambda.min)
+   lasso_coef[, g] <- c(lasso_model$a0, as.vector(lasso_model$beta))
+ }
+  
+  first_init_SP <- matrix(nrow = (p+1)*K, ncol = m)
+  for(g in 1:m) {
+    for(j in 0:p) {
+      first_init_SP[((j*K)+1):((j+1)*K), g] <- lasso_coef[j+1, g]
+    }
+  }
+
+ init_val_SP <- SP_model_r(delta = 1, lambda = 0.001, tol_error = 0.1^5, max_iter = 50, 
+                          X = X_train, Y = Y_train, V = V, Phi = Phi, theta_0 = first_init_SP, 
+                          tau_seq = tau_seq, weight = FALSE)
+ 
+ lamb_seq <- seq(3, 100, length.out = 20)
+ BIC_table <- list()
+
+cl <- makeCluster(20) #not to overload your computer
+registerDoParallel(cl) # Ready to parallel
+  
+BIC_table <- foreach(lambda = lamb_seq, .noexport = "add_decomp") %dopar% {
+  library(dplyr)
+  library(splines)
+  library(Matrix)
+  library(Rcpp)
+  library(glmnet)
+  library(fda)
+    
+  BIC_simul <- SP_model_BIC(X_train, Y_train, V, Phi, theta_0 = init_val_SP$theta, 
+                            tau_seq, tau_seq_real, lamb_seq = lambda, max_iter = 50)
+    BIC_simul$min_BIC
+  }
+stopCluster(cl)
+ 
+ BIC_params <- BIC_table %>%
+  bind_rows() %>%
+  arrange(BIC_log_p) %>%
+  head(1)
+
+ result <- SP_model_r(delta = 1, lambda = as.numeric(BIC_params$lambda), tol_error = 0.1^5, max_iter = 50, 
+                          X = X_train, Y = Y_train, V = V, Phi = Phi, theta_0 = init_val_SP$theta, tau_seq = tau_seq, weight = TRUE)
+ 
+ gamma_tau_hat <- est_gamma(Phi[idx_tau, ], result$theta)
+
+ Y_hat_test <- mapply(FUN = function(X, S) X %*% S, X = list(X_test),
+                      S = gamma_tau_hat, SIMPLIFY = FALSE)
+ error <- mapply(FUN = function(true, est) true - est, true = list(as.matrix(Y_test)), est = Y_hat_test, 
+                 SIMPLIFY = FALSE)
+ 
+ PE[i] <- cal_cl_sum(error, tau_seq_real)
+ print(i)
+}
+
+```
+
+
+
+
+
+
+# Low-rank Model
+
+## Initial value
+
+
+```{r}
+X <- as.matrix(X)
+Y <- as.matrix(Y)
+
+
+ridge_coef <- matrix(nrow = p+1, ncol = m)
+for(g in 1:m) {
+  cv.ridge <- cv.glmnet(x = X[, -1], y = Y[, g], alpha = 0, type.measure = "mae")
+  ridge_model <- glmnet(X[, -1], Y[, g], family = "gaussian", alpha = 0, 
+                        lambda = cv.ridge$lambda.min)
+  ridge_coef[, g] <- c(ridge_model$a0, as.vector(ridge_model$beta))
+}
+first_init_LR <- ridge_coef
+  
+init_val_LR <- LR_model_r(delta = 1, lambda = 0.05, tol_error = 0.1^5, max_iter = 50, 
+                          X = X, Y = Y, Z_0 = X %*% first_init_LR, tau_seq = tau_seq, weight = FALSE)
+
+log_lamb <- c( seq(1, 10, length.out = 20))
+lamb_seq <- exp(log_lamb)
+
+BIC_simul <- LR_model_BIC(X, Y, Z_0 = init_val_LR$Z, tau_seq, tau_seq_real, delta = 1, lamb_seq, max_iter = 50, r_X = 1)
+  
+BIC_params <- BIC_simul$min_BIC %>%
+    arrange(BIC_log_p) %>%
+    head(1)
+  
+result <- BIC_simul$simulation[[which(lamb_seq == BIC_params$lambda)]]
+  
+```
+
+
+
+
+# Sparse Model
+
+## Initial value
+
+```{r}
+X <- as.matrix(X)
+Y <- as.matrix(Y)
+
+ lasso_coef <- matrix(nrow = p+1, ncol = m)
+  for(g in 1:m) {
+    cv.lasso <- cv.glmnet(x = X[, -1], y = Y[, g], alpha = 1, type.measure = "mae")
+    lasso_model <- glmnet(X[, -1], Y[, g], family = "gaussian", alpha = 1, lambda = cv.lasso$lambda.min)
+    lasso_coef[, g] <- c(lasso_model$a0, as.vector(lasso_model$beta))
+  }
+  
+  first_init_SP <- matrix(nrow = (p+1)*K, ncol = m)
+  for(g in 1:m) {
+    for(j in 0:p) {
+      first_init_SP[((j*K)+1):((j+1)*K), g] <- lasso_coef[j+1, g]
+    }
+  }
+  
+  init_val_SP <- SP_model_r(delta = 1, lambda = 0.001, tol_error = 0.1^5, max_iter = 50, 
+                          X = X, Y = Y, V = V, Phi = Phi, theta_0 = first_init_SP, tau_seq = tau_seq, weight = FALSE)
+```
+
+```{r}
+gamma_tau_hat <- est_gamma(Phi[idx_tau, ], init_val_SP$theta)
+
+zero_idx_est <- lapply(gamma_tau_hat, FUN = function(x) which(abs(x) < 0.1^5, arr.ind = TRUE) %>% as_tibble) %>%
+    bind_rows (.id = "tau") %>%
+    group_by(row, col) %>%
+    summarise(zero = n(), .groups = "keep") %>%
+    filter(zero == length(gamma_tau_hat))
+
+Neg <- nrow(zero_idx_est)
+Pos <- prod(dim(gamma_tau_hat[[1]])) - Neg
+
+data.frame("Positive"=Pos, "Negative" = Neg)
+
+
+```
+
+
+
+```{r}
+lamb_seq <- seq(3, 100, length.out = 20)
+
+BIC_table <- list()
+
+cl <- makeCluster(20) #not to overload your computer
+registerDoParallel(cl) # Ready to parallel
+  
+BIC_table <- foreach(lambda = lamb_seq, .noexport = "add_decomp") %dopar% {
+  library(dplyr)
+  library(splines)
+  library(Matrix)
+  library(Rcpp)
+  library(glmnet)
+  library(fda)
+    
+  BIC_simul <- SP_model_BIC(X, Y, V, Phi, theta_0 = init_val_SP$theta, 
+                            tau_seq, tau_seq_real, delta = 1,lamb_seq = lambda, max_iter = 50)
+    BIC_simul$min_BIC
+  }
+stopCluster(cl)
+  
+BIC_table %>%
+  bind_rows() %>%
+  arrange(BIC_log_p) %>%
+  head(6)
+
+
+
+```
+
+
+```{r}
+result <- SP_model_r(delta = 1, lambda = 79.5989, tol_error = 0.1^5, max_iter = 50, 
+                          X = X, Y = Y, V = V, Phi = Phi, theta_0 = init_val_SP$theta, tau_seq = tau_seq, weight = TRUE)
+```
 
 
 # Check loss sum
 
 $$\sum_\ell^{b}\sum_{g=1}^m\sum_{i=1}^n\frac{1}{n}\rho_\tau(Y_i^{(g)}-x_i^T[\alpha^{(g)}+\gamma^{(g)}(\tau)])\\=\sum_\ell^{b}\sum_{g=1}^m\sum_{i=1}^n\frac{1}{n}\rho_\tau(e_i^{(\ell)(g)})$$
+
+```{r}
+gamma_tau_hat <- est_gamma(Phi[idx_tau, ], result$theta)
+L_hat <- solve(t(X_train) %*% X_train) %*% t(X_train) %*% result$Z
+
+Y_hat_test <- mapply(FUN = function(X, L, S) X %*% L + X %*% S, X = list(X_test), L = list(L_hat)
+                     , S = gamma_tau_hat, SIMPLIFY = FALSE)
+error <- mapply(FUN = function(true, est) true - est, true = list(as.matrix(Y_test)), est = Y_hat_test, SIMPLIFY = FALSE)
+
+cal_cl_sum(error, tau_seq_real)
+```
+
+
 
 
 ```{r}
